# ConsultorVirtualBackend

./: .gitignore  README.md  pyproject.toml
app/: api.py  api_adapter.py  api_models.py  database.py  graph_lc.py  lc_llm.py  models.py  repo_finanzas_db.py  router.py  state.py
app/agents/: intent.py
app/agents/aaav_cxc/: functions.py  logic.py
app/agents/aaav_cxp/: functions.py  logic.py
app/agents/aav_contable/: logic.py
app/agents/av_gerente/: kb.py  kb_support.py  llm_io.py  logic.py  orders.py  prompts.py  report.py  trace_extractors.py  utils.py
app/auth/: dependencies.py  firebase_admin.py  repository.py  router.py  service.py
app/configs/: kb_gerente_virtual.yml
app/dates/: period_resolver.py
app/schemas/: aaav_cxc_schema.json  aaav_cxp_schema.json
app/tools/: formatters.py  llm_json.py
app/utils/: executive_summary.py  knowledge_base.py
