[project]
name = "asistente-virtual"
version = "0.1.0"
description = "Asistente virtual con agentes de IA"
readme = "README.md"
license = { text = "Propietario - Uso interno solamente" }
requires-python = ">=3.10"
authors = [
  { name = "Joxan Portilla Hernandez", email = "joxanportilla@gmail.com" }
]

dependencies = [
  # Core
  "requests>=2.32.0",
  "python-dotenv>=1.0.0",
  "python-dateutil>=2.9.0",
  "pyyaml>=6.0.0",
  "jsonschema>=4.23.0",
  "python-multipart>=0.0.9",

  # Data
  "pandas>=2.2.2",
  "openpyxl>=3.1.5",

  # API
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  # Validation / settings
  "pydantic>=2.9.0",
  "pydantic-settings>=2.0.0",

  # DB (según tu pip list actual)
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",

  # Firebase (si lo usás ya)
  "firebase-admin>=7.0.0",

  # LLM stack
  "openai>=1.0.0",
  "langchain>=0.2.6",
  "langchain-community>=0.2.6",
  "langgraph>=0.2.2",
  "langchain-openai>=0.1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.setuptools.package-data]
"app" = ["**/*.json", "**/*.yaml", "**/*.yml", "**/*.md"]
